--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     tools:context="com.dhimandasgupta.datepicker.MainActivity">
 
     <com.dhimandasgupta.datepicker.DatePicker
+        android:id="@+id/activity_main_date_picker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </RelativeLayout>
