--- a/app/src/main/res/layout/adapter_months.xml
+++ b/app/src/main/res/layout/adapter_months.xml
@@ -3,16 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="80dp"
     android:layout_height="80dp"
-    android:orientation="vertical"
-    android:background="@drawable/shape_accent_oval">
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:background="@drawable/shape_accent_oval"
+    android:orientation="vertical">
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/adapter_month_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#ffffff"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:textStyle="bold"
+        android:gravity="center"
+        android:textColor="#ffffff"
         android:textSize="19sp"
+        android:textStyle="bold"
         tools:text="MAY"/>
 </FrameLayout>
