--- a/app/src/main/res/layout/include_date_picker.xml
+++ b/app/src/main/res/layout/include_date_picker.xml
@@ -2,39 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/month_text_view"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/shape_accent_oval"
         android:gravity="center"
-        android:background="@drawable/shape_accent_oval"/>
+        android:textStyle="bold" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/month_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="80dp" />
+        android:layout_height="80dp"
+        android:layout_marginRight="8dp" />
 
     <TextView
         android:id="@+id/day_text_view"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/shape_accent_oval"
         android:gravity="center"
-        android:background="@drawable/shape_accent_oval"/>
+        android:textStyle="bold" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/day_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="80dp" />
+        android:layout_height="80dp"
+        android:layout_marginRight="8dp" />
 
     <TextView
         android:id="@+id/year_text_view"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/shape_accent_oval"
         android:gravity="center"
-        android:background="@drawable/shape_accent_oval"/>
+        android:textStyle="bold" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/year_recycler_view"
